fix footer spacing on mobile

--- a/src/App.sass
+++ b/src/App.sass
@@ -146,7 +146,7 @@ nav
         text-decoration: underline
 
 footer
-  margin-bottom: 3em
+  padding-bottom: 3em
   
 main
   height: 100%
